patch/argo-ingress-grpc.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: argocd
  name: argocd-server-grpc-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: GRPC
spec:
  rules:
  - host: grpc.argocd.qotom.qubris.io
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              name: https
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - grpc.argocd.qotom.qubris.io
    secretName: argocd-secret
